// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`simple-table-demo narrow layout renders tables without right scrollbar overlap: narrow no selection 1`] = `
"                    
 SimpleTable Demo   
 1/2/3 dataset • W  
 wrap • B border •  
 M width • drag to  
 select • C clear   
 Current: dataset   
 1 | wrap word |    
 border single |    
 width content      
                    
 Operational Table  
                    
 ┌───┬────┬───────┐ 
 │Ser│Stat│Notes  │ 
 │vic│us  │       │ 
 │e  │    │       │ 
 ├───┼────┼───────┤ 
 │api│OK  │latency│ 
 │   │    │ 28ms  │ 
 ├───┼────┼───────┤ 
 │wor│DEGR│queue  │ 
 │ker│ADED│depth: │ 
 │   │    │124    │ 
 ├───┼────┼───────┤ 
 │bil│ERRO│retryin│ 
 │lin│R   │g payme│ 
 │g  │    │nt prov│ 
                    
 ┌─Selected Text──┐ 
 │                │ 
 │ No selection   │ 
 │ yet            │ 
 │                │ 
 │                │ 
 │                │ 
 │                │ 
 │                │ 
 └────────────────┘ 
                    
"
`;

exports[`simple-table-demo narrow layout selection status updates without collapsing table area: narrow with selection 1`] = `
"                    
 SimpleTable Demo   
 1/2/3 dataset • W  
 wrap • B border •  
 M width • drag to  
 select • C clear   
 Current: dataset   
 1 | wrap word |    
 border single |    
 width content      
                    
 Operational Table  
                    
 ┌───┬────┬───────┐ 
 │Ser│Stat│Notes  │ 
 │vic│us  │       │ 
 │e  │    │       │ 
 ├───┼────┼───────┤ 
 │api│OK  │latency│ 
 │   │    │ 28ms  │ 
 ├───┼────┼───────┤ 
 │wor│DEGR│queue  │ 
 │ker│ADED│depth: │ 
 │   │    │124    │ 
 ├───┼────┼───────┤ 
 │bil│ERRO│retryin│ 
 │lin│R   │g payme│ 
 │g  │    │nt prov│ 
                    
 ┌─Selected Text──┐ 
 │                │ 
 │ Selected 2     │ 
 │ lines (21      │ 
 │ Service        │ 
 │ Status         │ 
 │ api  OK        │ 
 │                │ 
 │                │ 
 └────────────────┘ 
                    
"
`;

exports[`simple-table-demo narrow layout toggles column width mode with keyboard: narrow width fill mode 1`] = `
"                    
 SimpleTable Demo   
 1/2/3 dataset • W  
 wrap • B border •  
 M width • drag to  
 select • C clear   
 Current: dataset   
 1 | wrap word |    
 border single |    
 width fill         
                    
 Operational Table  
                    
 ┌───┬────┬───────┐ 
 │Ser│Stat│Notes  │ 
 │vic│us  │       │ 
 │e  │    │       │ 
 ├───┼────┼───────┤ 
 │api│OK  │latency│ 
 │   │    │ 28ms  │ 
 ├───┼────┼───────┤ 
 │wor│DEGR│queue  │ 
 │ker│ADED│depth: │ 
 │   │    │124    │ 
 ├───┼────┼───────┤ 
 │bil│ERRO│retryin│ 
 │lin│R   │g payme│ 
 │g  │    │nt prov│ 
                    
 ┌─Selected Text──┐ 
 │                │ 
 │ No selection   │ 
 │ yet            │ 
 │                │ 
 │                │ 
 │                │ 
 │                │ 
 │                │ 
 └────────────────┘ 
                    
"
`;
